# crazy_chess

./: .gitignore  CMakeLists.txt
cmake_modules/: FindSFML.cmake
src/: main.cpp
src/model/: Bishop.cpp  Board.cpp  FontLoader.cpp  FontLoader.h  King.cpp  Knight.cpp  Pawn.cpp  Queen.cpp  Rook.cpp  Tile.cpp  piece.cpp
src/model/headers/: Bishop.h  Board.h  King.h  Knight.h  PathUtil.h  Pawn.h  Piece.h  PieceColor.h  PromotionChoice.h  PromotionModal.h  Queen.h  Rook.h  Tile.h
